// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <GifGrid/> should be show correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Dragon Ball
  </h3>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test <GifGrid/> should be show item where load image useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Dragon Ball
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Nombre"
      url="https://localhost:80"
    />
  </div>
</Fragment>
`;
